--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,9 +4,17 @@
         <servlet-name>cargaCombos</servlet-name>
         <servlet-class>Servlets.cargaCombos</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>buscaArticulos</servlet-name>
+        <servlet-class>Servlets.buscaArticulos</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>cargaCombos</servlet-name>
         <url-pattern>/cargaCombos</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>buscaArticulos</servlet-name>
+        <url-pattern>/buscaArticulos</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
